<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/animationScalling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:background="@color/violet"
        android:onClick="switchActivityScalling"
        android:text="@string/animation_scalling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationSpringAnimation" />

    <Button
        android:id="@+id/animationAnimatorSet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:background="@color/violet"
        android:onClick="switchActivityAnimatorSet"
        android:text="@string/animation_animatorset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationScalling" />

    <Button
        android:id="@+id/animationRotate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:background="@color/violet"
        android:onClick="switchActivityRotate"
        android:text="@string/animation_rotate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationAnimatorSet" />

    <Button
        android:id="@+id/animationAlpha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:background="@color/violet"
        android:onClick="switchActivityAlpha"
        android:text="@string/animation_alpha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationRotate" />

    <Button
        android:id="@+id/animationArgbEvaluator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:background="@color/violet"
        android:onClick="switchActivityArgbEvaluator"
        android:text="@string/animation_argbevatuator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationAlpha" />

    <Button
        android:id="@+id/animationSceneTransitionManager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:background="@color/violet"
        android:onClick="switchActivitySceneTransitionManager"
        android:text="@string/animation_scene_transitionmanager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationArgbEvaluator" />

    <Button
        android:id="@+id/animationSpringAnimation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:background="@color/violet"
        android:onClick="switchActivitySpringAnimation"
        android:text="@string/animation_springanimation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationTranslation"
        tools:text="Animation SpringAnimation" />

    <Button
        android:id="@+id/animationTranslation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        android:background="@color/violet"
        android:onClick="switchActivityTranslation"
        android:text="@string/animation_translation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>